# stud_assistant

./: .gitignore  CNAME  README.md  docker-compose.yml  index.html  package-lock.json
backend/: .coverage  Dockerfile  Dockerfile.dev  manage.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 12403e50ea9d_.py  249e4806fa6e_created_payment.py  46a33ff8bf06_add_currency_to_payment.py  530eb38fb237_add_customer_id_to_user.py  6360068ef41f_fix.py  7338288401da_overhaul_the_user_model.py  91c2557d0f2e_autogen.py  a08687f96d4c_finish_the_models.py  b7e2a5274a70_fix.py  bb728805b517_add_customerid_to_user.py  c95c3c4eb87a_add_subscription_to_user_model.py  cad92199bac6_.py  dec1b597c139_add_customer_id_to_user.py  ed86cdd3ef78_finish_customer_model.py  f4ceacebc6af_create_subscription_model.py
backend/app/: config.py  database.py  limiter.py  main.py  models.py  schemas.py  security.py
backend/app/api/endpoints/: auth.py  jwt_token.py  signup.py
backend/app/api/schemas/: user.py
backend/app/core/: config.py  models.py  security.py  users.py
backend/app/db/: database.py
backend/app/llm/: agent.py  llm.py
backend/app/routes/: auth.py  chat.py  subscription.py  subsrciption.py
backend/app/services/: classifier.py  payment.py  svc_model.joblib  text_classifier.py  tfidf_vectorizer.joblib  train_classifier.py
backend/app/tests/: test_auth.py  test_chat.py
backend/stud_assistant/: settings.py  urls.py
backend/stud_assistant.egg-info/: PKG-INFO  SOURCES.txt
backend/users/: models.py  serializers.py  views.py
(+77 files in other folders)
