[project]
name = "stud_assistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asyncpg==0.30.0",
    "bcrypt==4.3.0",
    "build>=1.3.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "coverage==7.11.0",
    "cryptography==46.0.1",
    "dnspython==2.8.0",
    "dotenv==0.9.9",
    "email-validator==2.2.0",
    "fastapi==0.117.1",
    "fastapi-users-db-sqlalchemy==7.0.0",
    "idna==3.10",
    "iniconfig==2.3.0",
    "langchain>=1.0.5",
    "langchain-classic>=1.0.0",
    "langchain-core>=1.0.4",
    "langchain-google-genai>=3.0.2",
    "makefun==1.16.0",
    "memory>=1.0.0",
    "numpy==2.3.3",
    "passlib>=1.7.4",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.10",
    "pwdlib==0.2.1",
    "pycparser==2.23",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pyjwt>=2.10.1",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "rich>=14.2.0",
    "sqlalchemy==2.0.43",
    "starlette==0.48.0",
    "typing-inspection==0.4.1",
    "uuid==1.30",
    "uvicorn==0.36.0",
]
[tool.stud_assistant]
working-dir = "backend"